# area_retangulo_Cplusplus

C#/Calcula_mdc_mmc_3_numeros/: Program.cs
C#/Potenciacao_base_expoente/: Form1.Designer.cs  Form1.cs  Potenciacao_base_expoente.sln  Program.cs
C++/Calcula_area_retangulo/: calcula_area_retangulo.cpp
C++/Calculadora cientifica/: Calculadora_cientifica.cpp
C++/Hello_World_CMake/: CMakeLists.txt  Hello_World_CMake.cpp  Hello_World_CMake.h
GO/Converte_milhas_km_GO/: converte_milhas_km.go
HTML_Javascript/Calculadora Científica/: calculadora_cientifica.html
HTML_Javascript/Conversor_doc_xls_to_pdf/: conversor_doc_xls_to_pdf.html
HTML_Javascript/Jogo_de_xadrez/: jogo_de_xadrez.html
HTML_Javascript/Jogo_estourar_bexigas/: jogo_estourar_bexigas.html
HTML_Javascript/Sorriso ou carinha feia/: sorriso_ou_carinha_feia.html
Python/Progressão geométrica/: Progressão geométrica.pyproj  Progressão geométrica.sln  Progressão_geométrica.py
Python/Raiz_quadrada/: raiz_qadrada.py
